--- a/public/css/css.css
+++ b/public/css/css.css
@@ -27,7 +27,7 @@ ul > li:hover > a{
 /*height: 65vh;*/
 /*}*/
 .cp_offcm01 {
-position: absolute;
+position: ;
 top: 20px;
 right: 20px;
 display: inline-block;
