--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -15,7 +15,7 @@ body {
     display: flex;
   flex-direction: column;
   min-height: 100vh;
-  
+  z-index: 10;
 }
 
 /* copyright*/
@@ -319,6 +319,9 @@ footer {
 .hot-icon_img{
    width: 33%;
 }
+.hot-icon_img:hover {
+    
+}
 
 .hotbtn{
   display: inline;
@@ -384,6 +387,7 @@ footer {
   color: #03eb89;
   transition: .4s;
   margin-top: 25px;
+  margin-bottom: 40%;
 }
 
 .combtn:before {
