--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -29,14 +29,14 @@ footer {
 .logo2 {
   width: 150px;
   height: 50px;
-  margin: 10px 0px 0px 10px;
+  /*margin: 10px 0px 0px 10px;*/
 }
 
-/*.icon-image {*/
-/*    margin: 10px 0px 0px 10px;*/
-/*    position: fixed;*/
+.icon-image {
+    /*margin: 0px 0px 0px 5px;*/
+    position: fixed;
     
-/*}*/
+}
 
 
 
