--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -32,11 +32,10 @@ footer {
   margin: 10px 0px 0px 10px;
 }
 
-/*.icon-image {*/
-/*    margin: 10px 0px 0px 10px;*/
-/*    position: fixed;*/
+.icon-image {
+    position: fixed;
     
-/*}*/
+}
 
 
 
