--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -5,49 +5,49 @@
 
 .container {
     width: 100%;
+    padding: 0;
     
 }
 
-.body {
+body {
     background-color: #fffef4;
     color: #435160;
-  /*font-family: "Open Sans", sans-serif;*/
+    display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  
 }
 
 /* copyright*/
-.footer {
+footer {
     text-align: center;
-    margin-top: 60px;
-    margin-bottom: 0px;
+    width: 100%;
+    margin-top: auto;
 }
 
 /* navbarの小ロゴ ↓　*/
 .logo2 {
   width: 150px;
   height: 50px;
+  margin: 10px 0px 0px 10px;
 }
 
-.icon-image {
-    margin-top: 10px;
-}
+/*.icon-image {*/
+/*    margin: 10px 0px 0px 10px;*/
+/*    position: fixed;*/
+    
+/*}*/
 
-.feelings {
-    text-align: center;
-    color: white;
-    font-size: 2em;
-    margin-top: 10%;
-}
 
 
 /* welcome.blade.php ↓　*******************************************************/
 /* welcomeの背景*/
-.welcome {
-    background-image: url("../images/sky.jpg");
-}
+
 .sky {
-    width: 100%;
+    background-image: url("../images/sky.jpg");
+    width: 100% !important;
     height: 100%;
-    margin: 0 0 0 0;
+   
 }
 .map-child  {
   width: 100%;
@@ -166,7 +166,7 @@
 /* register.blade.php ↓　******************************************************/
 .ex1 {
     text-align: center;
-    font-size: 100px;
+    font-size: 50px;
     color: #5b75ad;
 }
 
@@ -176,40 +176,10 @@
     color: #5b75ad;
 }
 
-/*.left-content {*/
-/*  font-size: 70px;*/
-/*}*/
-
-/*.debu {*/
-/*  color: red;*/
-/*  font-size: 90px;*/
-/*}*/
-
-/*.gari {*/
-/*  color: blue;*/
-/*  font-size: 90px;*/
-/*}*/
-
-/* 右側のコンテント ↓　*/
-/*.right-content {*/
-
-/*}*/
-
 * {
   margin: 0;
   padding: 0;
   font-family: cursive;
-}
-
-
-/* signupのタイトル ↓　*/
-.sighup-title {
-  color: #5b75ad;
-  font-family: cursive;
-  font-weight: bold;
-  font-size: 3.6em;
-  text-align: center;
-  margin-bottom: 20px;
 }
 
 /* signupの質問項目 ↓　*/
@@ -327,8 +297,8 @@
 
 
 /* feel.blade.php ↓　**********************************************************/
-.feelpage {
-  margin-top: 0px;
+.feel-page {
+  margin-bottom: 290px;
 }
 
 .explanation {
@@ -600,7 +570,6 @@
   width: 24%;
   display: inline-block;
   text-align: center;
-  padding: 15% 0;
   font-family: cursive;
   font-weight: bold;
   font-size: 28px !important;
@@ -633,7 +602,7 @@
 
 /*map color info*/
 .colorinfo {
-    margin-top: 900px;
+    margin-top: 20px;
     text-align: center;
 }
 
@@ -677,12 +646,13 @@
 .tribe {
     margin: 10px 10px;
     text-align: center;
+    width: 100%;
 }
 
 .screen {
     text-align: center;
     font-size: 30px;
-    margin: 20px 0px;
+    margin-bottom: 20px;
     border: 2px;
 }
 
@@ -693,22 +663,68 @@
  100% { color: red }
 }
 
+.veryhot-tribe:hover:after{
+content:"エアコンを３度下げる事を許可します。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
+}
 .hot-tribe {padding-top: 60px; font-size:25px; animation: blinkAnime 1s infinite alternate;}
 @keyframes blinkAnime{
    0% { color: #000000 }
  100% { color: red }
 }
 
+.hot-tribe:hover:after{
+content:"エアコンを２度下げる事を許可します。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
+}
+
 .cold-tribe {padding-top: 60px; font-size:25px; animation: blinknoAnime 1s infinite alternate;}
 @keyframes blinknoAnime{
    0% { color: #000000 }
  100% { color: blue }
 }
 
+.cold-tribe:hover:after{
+content:"エアコンを２度上げる事を許可します。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
+}
 .verycold-tribe {padding-top: 50px; font-size: 30px; animation: blinknoAnime .2s infinite alternate;}
 @keyframes blinknoAnime{
    0% { color: #000000 }
  100% { color: blue }
+}
+
+.verycold-tribe:hover:after{
+content:"エアコンを３度上げる事を許可します。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
 }
 
 .com-tribe {
@@ -716,22 +732,16 @@
     padding-top: 60px;
 }
 
-
-.cold-tribe {padding-top: 60px; font-size:25px; animation: blinknoAnime 1s infinite alternate;}
-@keyframes blinknoAnime{
-   0% { color: #000000 }
- 100% { color: blue }
-}
-
-.verycold-tribe {padding-top: 50px; font-size: 30px; animation: blinknoAnime .2s infinite alternate;}
-@keyframes blinknoAnime{
-   0% { color: #000000 }
- 100% { color: blue }
-}
-
-.com-tribe {
-    font-size: 20px;
-    padding-top: 60px;
+.com-tribe:hover:after{
+content:"快適なはずです。";
+display:block;
+position:fixed;
+left:0;
+width:100%;
+height:30px;
+line-height:30px;
+font-weight:bold;
+text-align:center;
 }
 
 .clearbtnparent {
@@ -797,22 +807,19 @@
 
 /*introduction のcss*/
 
-h1{
-   text-align:center;
-   font-family:sans-serif;
-   margin-bottom: 5px;
-   margin-top:40px;
-}
-.intrologo img{
-    width:800px;
+
+.intrologo{
     text-align: center;
+    max-width:100%;
     margin-bottom: 0px;
 }
 
 .life{
     margin-bottom:50px;
     font-size: 45px;
-    margin-top: 0px;
+    margin-top: 0px; 
+    text-align: center;
+    
 }
 
 .wholebody {
@@ -823,7 +830,15 @@ h1{
     display:inline-block;
     border-bottom:4px solid #5b75ad;
     margin-bottom: 20px;
+    text-align:center !important;
+    font-family:sans-serif;
+    margin-top:40px;
+    font-size:50px;
     
+}
+
+h2{
+    font-size:35px;
 }
 
 .wholebody p {
@@ -831,7 +846,31 @@ h1{
 }
 
 .footer2 footer{
-    font-size: 30px;
-     text-align:center;
+    text-align:center;
+    margin-top:60px;
+    margin-bottom:40px;
+}
+
+.footer2 p{
+    font-size: 50px !important;
+}
+
+.body2 h2{
+    display:inline-block;
+    border-bottom:4px solid #5b75ad;
+    margin-bottom: 0px;
+}
+
+.body2 p{
+    margin:auto 
+}
+
+.body3 ol{
+    font-size:25px !important;
+}
+
+.body5 ol{
+    font-size:30px !important;
+    margin-bottom:0px;
 }
 
