--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -369,44 +369,41 @@ h1{
 .remote {
     font-size:20px;
 }
-/* manipulation.blade.php *****************************************************/
-.asakai {
-    float: left;
-    text-align: center;
-    width: 49%;
-    padding: 30px 0px 30px 30px;
+
+.asakai h1{
+     font-size:40px;
+     display:inline-block;
+     border-bottom:4px solid #5b75ad;
+     margin-bottom: 20px;
+     margin-top:40px;
 }
 
-.remote {
-    float: right;
-    text-align: center;
-    width: 49%;
-    padding: 30px 30px 30px 0px;
-
+.remote h1{
+     font-size:40px;
+     display:inline-block;
+     border-bottom:4px solid #5b75ad;
+     margin-bottom: 20px;
+     margin-top:40px;
 }
 
 .map {
-    width: 100%;
+    width: 65%;
     height: 45%;
+    margin-top: 20px;
+    margin-right: 60px;
+    margin-bottom: 60px;
 }
-
-.remotes {
-}
-
 
 .remote1 {
-    padding-top: 0;
-    width: 47%;
+    margin-top: 10px;
+    width: 39%;
     height: auto;
 }
 
 .remote2 {
-    width: 49%;
+    width: 39%;
     height: auto;
 }
-
-
-
 
 /* feel.blade.php ↓　**********************************************************/
 .feel-page {
