--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -43,15 +43,6 @@ footer {
 
 /* welcome.blade.php ↓　*******************************************************/
 
-/* welcomeの背景*/
-
-/*.sky {*/
-/*    background-image: url("../images/sky2.jpg");*/
-/*    width: 100% !important;*/
-/*    height: 100%;*/
-   
-/*}*/
-
 .map-child  {
   width: 100%;
   display: inline-block;
@@ -80,7 +71,7 @@ footer {
 .logo1 {
     width: 40%;
     height: auto;
-    margin: 0px 0px 50px 0px;
+    margin: 100px 0px 50px 0px;
     transition: 1.5s;
 }
 
@@ -608,7 +599,7 @@ h1{
     margin-top: 70px;
      overflow: hidden;
 
-  animation: flowing 10s linear infinite;
+  animation: flowing 15s linear infinite;
   transform: translateX(100%);
 }
 @keyframes flowing {
@@ -616,6 +607,7 @@ h1{
     transform: translateX(-100%);
   }
 }
+
 
 
 /*mapの上のボタン↓*/
@@ -714,7 +706,7 @@ h1{
   display: inline-block;
   text-align: center;
   font-weight: bold;
-  font-size: 30px !important;
+  font-size: 25px !important;
 }
 
 /*点滅するアニメーション*/
@@ -744,9 +736,10 @@ h1{
 
 /*map color info*/
 .colorinfo {
-    margin-bottom: 20px;
+    margin: 10px 0 20px 0;
     text-align: center;
 }
+
 
 .hot {
     margin-left: 5px;
@@ -797,7 +790,7 @@ h1{
 .screen {
     text-align: center;
     font-size: 30px;
-    margin-bottom: 20px;
+    margin: 60px 0 20px 0;
     border: 2px;
 }
 
@@ -894,46 +887,46 @@ text-align:center;
 }
 
 
-.clearbtn {
-    position: relative;
-    display: inline-block;
-    font-weight: bold;
-    padding: 5px 11px 5px 15px;
-    text-decoration: none;
-    color: #5b75ad ;
-    transition: .4s;
-    margin:0 10px;
-}
+/*.clearbtn {*/
+/*    position: relative;*/
+/*    display: inline-block;*/
+/*    font-weight: bold;*/
+/*    padding: 5px 11px 5px 15px;*/
+/*    text-decoration: none;*/
+/*    color: #5b75ad ;*/
+/*    transition: .4s;*/
+/*    margin:0 10px;*/
+/*}*/
 
-.clearbtn:before {
-   position: absolute;
-   display: inline-block;
-   content: '';
-   width: 4px;
-   height: 100%;
-   top: 0;
-   left: 0;
-   border-radius: 3px;
-   background:#5b75ad ;
-}
+/*.clearbtn:before {*/
+/*   position: absolute;*/
+/*   display: inline-block;*/
+/*   content: '';*/
+/*   width: 4px;*/
+/*   height: 100%;*/
+/*   top: 0;*/
+/*   left: 0;*/
+/*   border-radius: 3px;*/
+/*   background:#5b75ad ;*/
+/*}*/
 
-.clearbtn:after{
-   position: absolute;
-   display: inline-block;
-   content: '';
-   width: 4px;
-   height: 100%;
-   top:0;
-   left: 100%;
-   border-radius: 3px;
-   background:#5b75ad ;
-}
+/*.clearbtn:after{*/
+/*   position: absolute;*/
+/*   display: inline-block;*/
+/*   content: '';*/
+/*   width: 4px;*/
+/*   height: 100%;*/
+/*   top:0;*/
+/*   left: 100%;*/
+/*   border-radius: 3px;*/
+/*   background:#5b75ad ;*/
+/*}*/
 
-.clearbtn:hover:before,.clearbtn:hover:after{
-  -webkit-transform: rotate(10deg);
-  -ms-transform: rotate(10deg);
-  transform: rotate(10deg);
-}
+/*.clearbtn:hover:before,.clearbtn:hover:after{*/
+/*  -webkit-transform: rotate(10deg);*/
+/*  -ms-transform: rotate(10deg);*/
+/*  transform: rotate(10deg);*/
+
 /*input[type="text"], input[type="password"] {*/
 /*  width: 350px;*/
 /*  padding: 20px 0px;*/
@@ -994,6 +987,11 @@ h1{
     margin-top: 110px;
 }
 .footermap {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.fottermaps {
     text-align: center;
     margin-top: 10px;
 }
