--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -15,14 +15,6 @@
 .container {
     width: 100%;
     padding: 0;
-    
-}
-
-/* copyright*/
-footer {
-    text-align: center;
-    width: 100%;
-    margin-top: auto;
 }
 
 /* navbarの小ロゴ ↓　*/
@@ -46,7 +38,6 @@ footer {
     position: absolute;
     top: 100px;
     width: 100%;
-    z-index: 10;
 }
 
 /* welcomeの大ロゴ ↓　*/
@@ -138,6 +129,10 @@ footer {
     margin-top: 30px;
 }
 
+.row {
+    width: 100%;
+}
+
 .ex1 {
     text-align: center;
     font-size: 50px;
@@ -150,7 +145,7 @@ footer {
   font-weight: bold;
   font-size: 1.4em;
   text-align: left;
-  margin-bottom: 2px;
+  margin-bottom: 0;
 }
 
 /* signupボタン ↓　*/
@@ -193,7 +188,7 @@ footer {
 .explanation {
     text-align: center;
     margin-top: 90px;
-    margin-bottom: 50px;
+    margin-bottom: 90px;
     font-size:60px;
     color: #5b75ad;
 }
@@ -266,7 +261,7 @@ footer {
 
 /* comfortableのコンテント ↓　*/
 .comcontent {
-  width: 33%;
+  width: 34%;
   float: left;
   text-align: center;
 }
@@ -292,8 +287,7 @@ footer {
   text-decoration: none;
   color: #03eb89;
   transition: .4s;
-  margin-top: 25px;
-  margin-bottom: 40%;
+  margin-top: 10px;
 }
 
 .combtn:before {
@@ -428,7 +422,7 @@ footer {
     border-radius: 5px;
 }
 
-.btn-jedi {
+.btn-disciple {
     /*color: #fff !important;*/
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
@@ -438,7 +432,7 @@ footer {
     margin: 10px 0 0 0;
 }
 
-.btn-jedi:hover {
+.btn-disciple:hover {
     -webkit-transform: translateY(-5px);
     -ms-transform: translateY(-5px);
     transform: translateY(-5px);
@@ -530,10 +524,10 @@ footer {
 
 /*map color info*/
 .colorinfo {
-    margin: 10px 0 20px 0;
-    text-align: right;
+    margin-top: 10px;
+    text-align: center;
     float: left;
-    width: 70%
+    width: 100%;
 }
 
 .maplink {
@@ -655,13 +649,13 @@ h1{
     /* text-align:center;*/
 }
 
-.footer2 {
+.last-message {
     text-align:center;
     margin-top:60px;
     margin-bottom:40px;
 }
 
-.footer2 p{
+.last-message p{
     font-size: 45px !important;
 }
 
@@ -890,11 +884,12 @@ h1{
 
 /*footerたち*******************************************************************/
 .footerwelcome {text-align: center; margin-top: 700px;}
-.footerfeel {text-align: center; margin-top: 30px;}
+.footerreg {text-align: center; margin-top: 33px;}
+.footerlogin {text-align: center; margin-top: 180px;}
+.footerfeel {text-align: center; margin-top: 185px;}
 .footermap {text-align: center; margin-top: 10px;}
-.fottermaps {text-align: center; margin-top: 10px;}
+.footermaps {text-align: center; margin-top: 15px;}
 .footergrah {text-align: center; margin-top: 10px;}
 .footerintro {text-align: center; margin-top: 10px;}
 .footermani {text-align: center; margin-top: 10px;}
-.footerlogin {text-align: center; margin-top: 10px;}
 .footermanireg {text-align: center; margin-top: 10px;}
