--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -750,6 +750,10 @@ h1{
     border: 2px;
 }
 
+.mod {
+    width: 100%;
+}
+
 /*tribeの文字*/
 .veryhot-tribe {padding-top: 50px; font-size: 30px; animation: blinkAnime .2s infinite alternate;}
 @keyframes blinkAnime{
